admission/ValidatingAdmissionPolicy/policies/readinessprobe-tcpsocket-host/containers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: readinessprobe-tcpsocket-host-containers
  annotations:
    security.kubeapt.io/displayName: "Readinessprobe Tcpsocket Host"
    security.kubeapt.io/description: "ValidatingAdmissionPolicy for readinessprobe-tcpsocket-host/containers."
    security.kubeapt.io/resource: "Containers"
    security.kubeapt.io/severity: "3"
    security.kubeapt.io/remediation: "Adjust workloads to satisfy the readinessprobe-tcpsocket-host/containers policy."
    security.kubeapt.io/product: "Kubernetes"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ''
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validations:
  - expression: |
      object.spec.containers.all(c,
        !has(c.readinessProbe) ||
        !has(c.readinessProbe.tcpSocket) ||
        !has(c.readinessProbe.tcpSocket.host) ||
        c.readinessProbe.tcpSocket.host == ""
      )
    message: |
      spec.containers[*].readinessProbe.tcpSocket.host must be undefined or empty ("").
